adding Slack and Jira functionality

--- a/CommonClassUtils/CommonClassUtils.csproj
+++ b/CommonClassUtils/CommonClassUtils.csproj
@@ -49,6 +49,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BuildUri.cs" />
     <Compile Include="Driver.cs" />
     <Compile Include="GenerateRandomStrings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
