--- a/DemoTests/app.config
+++ b/DemoTests/app.config
@@ -14,22 +14,22 @@
                 <value>c:\TestResults\DemoTestResults</value>
             </setting>
             <setting name="postToSlack" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="urlWithAccessToken" serializeAs="String">
-                <value>SLACK-HOOK-GOES-HERE</value>
+                <value>True</value>
             </setting>
             <setting name="slackChannel" serializeAs="String">
-                <value>#faron-test</value>
+                <value>#test-results</value>
             </setting>
             <setting name="createJiraTicket" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="JiraUsername" serializeAs="String">
                 <value>faronc</value>
             </setting>
             <setting name="JiraPassword" serializeAs="String">
-                <value>PASS</value>
+                <value>YourJiraPassword</value>
+            </setting>
+            <setting name="urlWithAccessToken" serializeAs="String">
+                <value>https://hooks.slack.com/services/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</value>
             </setting>
         </DemoTests.Config>
     </userSettings>
