--- a/SlackLibrary/SlackLibrary.csproj
+++ b/SlackLibrary/SlackLibrary.csproj
@@ -34,6 +34,10 @@
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharp.105.2.3\lib\net452\RestSharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
@@ -45,12 +49,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="JiraActions.cs" />
+    <Compile Include="PostToSlack.cs" />
     <Compile Include="SlackActions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SlackClientAPI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CommonClassUtils\CommonClassUtils.csproj">
+      <Project>{92be39c2-7dbd-44cd-8559-a5fff1366796}</Project>
+      <Name>CommonClassUtils</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
